tests/snapshots/examples_fixtures/effects__01_default_entry_handlers.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/01_default_entry_handlers.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
