tests/snapshots/examples_fixtures/effects__02_explicit_effect_rows_and_aliases.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/02_explicit_effect_rows_and_aliases.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
