tests/snapshots/examples_fixtures/effects__03_user_console_handler.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/03_user_console_handler.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
