tests/snapshots/examples_fixtures/effects__04_modules_and_rows.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/04_modules_and_rows.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
