tests/snapshots/examples_fixtures/effects__05_row_polymorphic_callbacks.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/05_row_polymorphic_callbacks.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
