tests/snapshots/examples_fixtures/effects__06_sealing_effect_scope.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/06_sealing_effect_scope.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
