tests/snapshots/examples_fixtures/effects__07_custom_effect_handler.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/07_custom_effect_handler.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
