tests/snapshots/examples_fixtures/effects__08_filesystem_and_clock.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/08_filesystem_and_clock.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
