tests/snapshots/examples_fixtures/effects__09_parameterized_counter.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/09_parameterized_counter.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
