tests/snapshots/examples_fixtures/effects__10_parameterized_reader.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/10_parameterized_reader.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
