tests/snapshots/examples_fixtures/effects__11_parameterized_console_capture.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/11_parameterized_console_capture.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
