tests/snapshots/examples_fixtures/effects__12_parameterized_fallthrough.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/12_parameterized_fallthrough.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
